Bug 340134 - FB2 module do not display content of tags <annotation> AND <subtitle>
Summary: FB2 module do not display content of tags <annotation> AND <subtitle>
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: fictionbook backend (other bugs)
Version First Reported In: 0.19.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-19 18:29 UTC by Fredy BackSlash
Modified: 2022-01-04 05:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
how it should look like. (83.06 KB, image/png)
2014-10-28 03:36 UTC, Fredy BackSlash
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fredy BackSlash 2014-10-19 18:29:39 UTC
for FB2 files with tags <annotation>  AND <subtitle> 
Content of this tags is skiped and do not show

Same file opened in best reader for adnroid ZXReader show content of this tags in place.

Reproducible: Always

Steps to Reproduce:
1. Open any file with tags <annotation>  AND/OR <subtitle>  
as example 
https://www.dropbox.com/s/ucbjxip0z2d7rql/%D0%A7%D0%B5%D1%80%D0%BD%D1%8B%D0%B9%20%D0%9C%D0%B8%D1%80%202.%20%D0%A7%D0%B5%D1%80%D0%BD%D1%8B%D0%B9%20%D0%BF%D1%83%D1%82%D1%8C.fb2?dl=0


Actual Results:  
content from this tags is not displayed
Comment 1 Albert Astals Cid 2014-10-27 21:43:03 UTC
Please attach an image of how it should look like.
Comment 2 Fredy BackSlash 2014-10-28 03:36:15 UTC
Created attachment 89343 [details]
how it should look like.
Comment 3 Fredy BackSlash 2014-10-28 03:40:29 UTC
<subtitle> should llook like part of title with smaller font-size; 
<annotation> (and <epigraph>) should have margin about 10% from left border, and font-style:italic;
<text-author> is a subtag of <epigraph> should be show to.
Comment 4 Albert Astals Cid 2014-10-29 00:31:51 UTC
I see, don't have anyone with much fb2 experience at hand so this may take a while unless someone else has time to look at it
Comment 5 Justin Zobel 2021-03-09 23:59:27 UTC
Thank you for the bug report.

As this report hasn't seen any changes in 5 years or more, we ask if you can please confirm that the issue still persists.

If this bug is no longer persisting or relevant please change the status to resolved.
Comment 6 Fredy BackSlash 2021-03-10 10:12:45 UTC
The issue still persists.
tags <annotation>  AND <subtitle> still skipped and do not shown
Comment 7 Bug Janitor Service 2021-03-10 13:02:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/okular/-/merge_requests/379
Comment 8 Albert Astals Cid 2021-03-11 22:02:21 UTC
Git commit 272b386f586615eeb7ae633ca0c91a2b457ff26e by Albert Astals Cid, on behalf of Yuri Chornoivan.
Committed on 11/03/2021 at 22:02.
Pushed by aacid into branch 'master'.

Enhance FictionBook support: book annotation, text-author for the cite, section subtitles

M  +49   -0    generators/fictionbook/converter.cpp
M  +1    -0    generators/fictionbook/converter.h

https://invent.kde.org/graphics/okular/commit/272b386f586615eeb7ae633ca0c91a2b457ff26e