Enhance FictionBook support: book annotation, text-author for the cite, section subtitles

BUG: 340134